# chemicalspace

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scratch.ipynb  setup.py
.badges/: coverage.sh  tests.sh  update-badges.sh
chemicalspace/: __init__.py  space.py  utils.py
chemicalspace/layers/: acquisition.py  base.py  clustering.py  diversity.py  neigbors.py  neighbors.py  projection.py  utils.py
data/: inputs2.smi
docs/: Makefile  README.md  conf.py  rebuild.sh
docs/source/: conf.py  index.rst
notebooks/: 00-qsar-modelling.ipynb  README.md
tests/: test_acquisition.py  test_base.py  test_clustering.py  test_diversity.py  test_neighbors.py  test_projection.py  test_space.py
tests/data/: README.md  inputs.md5sum  inputs1.sdf  inputs1.smi  inputs2.sdf  inputs2.smi
