[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chemicalspace"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "An Object-oriented Representation for Chemical Spaces"
authors = [{name = "Giulio Mattedi", email = "giulio.mattedi@gmail.com"}]
maintainers = [{name = "Giulio Mattedi", email = "giulio.mattedi@gmail.com"}]
keywords = ["chemistry", "cheminformatics", "rdkit", "machine learning", "ml"]
requires-python = ">=3.9"
readme = "README.md"
license= {file = "LICENSE.md"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Physics"

]

[tool.setuptools]
packages = ["chemicalspace"]

[tool.setuptools.dynamic]
version = {attr = "chemicalspace.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}